--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "agno>=2.1.1",
+    "ddgs>=9.6.0",
+    "duckduckgo-search>=8.1.1",
+    "fastapi>=0.118.0",
+    "google-genai>=1.41.0",
+    "pydantic>=2.11.10",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.5",
+    "uvicorn>=0.37.0",
+]
